[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/PowerUps/Explosion.gd" type="Script" id=1]
[ext_resource path="res://Art/PowerUps/Explosion/CenterBlastRadius.png" type="Texture" id=2]
[ext_resource path="res://Art/PowerUps/Explosion/SmokeCloud.png" type="Texture" id=3]
[ext_resource path="res://Art/PowerUps/Explosion/CenterBlast.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Audio/SfxPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Audio/ExplosionSFX.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 476.003

[sub_resource type="Animation" id=2]

resource_name = "Explosion"
length = 0.4
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("CenterBlast:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.26, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterBlast:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07, 0.24, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SmokeCloud:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.24 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SmokeCloud:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Explosion" type="Position2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="VisualFeedback" type="Sprite" parent="." index="0"]

visible = false
modulate = Color( 1, 1, 1, 0.270706 )
scale = Vector2( 0.740315, 0.740315 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="TriggerTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="Area2D" type="Area2D" parent="." index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Explosion = SubResource( 2 )
blend_times = [  ]

[node name="SmokeCloud" type="Sprite" parent="." index="4"]

modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CenterBlast" type="Sprite" parent="." index="5"]

modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="SfxPlayer" parent="." index="6" instance=ExtResource( 5 )]

stream = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]


